--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-    <fragment
+    tools:context="com.starcompany.fragmentdrill.SubActivity">
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/titleFragment"
-        android:name="com.starcompany.fragmentdrill.TitleFragment">
-    </fragment>
+        android:id="@+id/detailFrame"
+        android:padding="16dp"></FrameLayout>
+
 </LinearLayout>
